# starry-lyfe

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  alembic.ini  journal.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: phase1-gate.yml  phase2-gate.yml
Archive/v7.1_pre_yaml/: MANIFEST.md
Characters/: Adelia_Raye_Knowledge_Stack.md  Alicia_Marin_Voice.md  Reina_Torres_Kinetic_Pair.md  Reina_Torres_Voice.md  Reina_Torres_v7.1.md  adelia_raye.yaml  alicia_marin.yaml  bina_malek.yaml  reina_torres.yaml  shared_canon.yaml  shawn_kroon.yaml
Docs/: ADR_001_Voice_Authority_Split.md  ARCHITECTURE.md  CHANGELOG.md  CHARACTER_CONVERSION_PIPELINE.md  Character_Creation_Audit.md  Claude_Code_Handoff_v7.1.md  IMPLEMENTATION_PLAN_v7.1.md  Journal_Template.md  MSTY_SETUP.md  Msty_Studio_Comprehensive_Analysis.md  OPERATOR_GUIDE.md  PHASE_1_AUDIT_REMEDIATION.md  PHASE_1_REMEDIATION_AUDIT.md  PHASE_3_AUDIT_REMEDIATION.md  PHASE_3_REMEDIATION_AUDIT.md  Persona_Tier_Framework_v7.1.md  Phase_0_Verification_Report_2026-04-11.md  REMEDIATION_2026-04-13.md  Templates.md  YAML_Analysis.md  qualitative_review_template.md  witness_pattern.md
Vision/: Adelia Raye.md  Alicia Marin.md  Architecture_Core.md  Bina Malek.md  Reina Torres.md  Starry-Lyfe_Vision_v7.1.md
alembic/: env.py
docker/: Dockerfile  docker-compose.yml
scripts/: flattening_regression_detector.py  generate_phase_e_samples.py  generate_phase_f_samples.py  phase_0_verification.py  reembed_episodic_memories.py  seed_msty_persona_studio.py
tests/: conftest.py
(+357 files in other folders)
