[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starry-lyfe"
version = "7.1.0"
description = "Character AI backend: four v7.1 persona kernels with persistent memory, life simulation, and Whyze-Byte validation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "PyYAML>=6.0,<7.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "pgvector>=0.3,<1.0",
    "httpx>=0.27,<1.0",
    "apscheduler>=3.10,<4.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.35,<1.0",
    "sse-starlette>=2.0,<3.0",
    "prometheus-client>=0.20,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["starry_lyfe"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "asyncpg.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
